--- a/src/Journal.css
+++ b/src/Journal.css
@@ -2,11 +2,19 @@
   background-color: antiquewhite;
   width: 10%;
   padding: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.WeeklyChange {
+  background-color: aquamarine;
+  width: 10%;
+  padding: 20px;
+  text-align: center;
 }
 
 .JournalContainer {
   margin: auto;
   width: 80%;
   margin-top: 60px;
-
 }
